--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,11 +2,9 @@ FROM golang:1.22-alpine
 
 WORKDIR /app
 
-COPY go.mod go.sum ./
-RUN go mod download
-
 COPY . .
 
 RUN go build -o node ./cmd/node
+RUN go build -o controller ./cmd/controller
 
 CMD ["./node"]
